[workspace]
members = ["tokio-fsm", "tokio-fsm-core", "tokio-fsm-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"
authors = ["Abhishek Shree <abhishek.shree@outlook.com>"]
repository = "https://github.com/abhishekshree/tokio-fsm"
readme = "README.md"

[workspace.dependencies]
tokio = { version = "1.0", features = ["sync", "time", "macros"] }
