[workspace]
members = ["tokio-fsm", "tokio-fsm-core", "tokio-fsm-macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Abhishek Shree <abhishek.shree@outlook.com>"]
repository = "https://github.com/abhishekshree/tokio-fsm"
readme = "README.md"

[workspace.dependencies]
tokio-fsm-core = { path = "tokio-fsm-core" }
tokio-fsm-macros = { path = "tokio-fsm-macros" }

tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"

[workspace.metadata.release]
# versioning
shared-version = true
dependent-version = "upgrade"

# git behavior
push = true
sign-commit = false
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release v{{version}}"
push-remote = "origin"

# publishing
publish = true

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
