[workspace]
members = [
    ".",
    "tokio-fsm-core",
    "tokio-fsm-macros",
]
exclude = ["examples/axum_fsm"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Abhishek Shree <abhishek.shree@outlook.com>"]
repository = "https://github.com/abhishekshree/tokio-fsm"
readme = "README.md"

[workspace.dependencies]
tokio-fsm-core = { version = "0.1.3", path = "tokio-fsm-core" }
tokio-fsm-macros = { version = "0.1.3", path = "tokio-fsm-macros" }

tokio = { version = "1.0", features = ["sync", "rt", "time", "macros"] }
thiserror = "2.0"

[package]
name = "tokio-fsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Compile-time generation of Tokio async finite state machines with explicit Rust behavior and zero runtime engine"
keywords = ["tokio", "async", "fsm", "state-machine", "proc-macro"]
categories = [
    "asynchronous",
    "concurrency",
    "development-tools::procedural-macro-helpers",
]

[dependencies]
tokio-fsm-core = { workspace = true }
tokio-fsm-macros = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "comparison"
harness = false

[workspace.metadata.release]
# versioning
shared-version = true
dependent-version = "upgrade"

# git behavior
push = true
sign-commit = false
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release v{{version}}"
push-remote = "origin"

# publishing
publish = true

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
