[package]
name = "tokio-fsm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true

description = "Core runtime types for tokio-fsm"

[dependencies]
humantime = "2.3.0"
tokio = { workspace = true }

