[package]
name = "tokio-fsm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"

description = "Core runtime types for tokio-fsm"

[dependencies]
tokio = { workspace = true }
