[package]
name = "tokio-fsm-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true
readme = "../README.md"

description = "Proc macro for generating Tokio async finite state machines"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
darling = "0.23"
petgraph = "0.6"
humantime = "2.1.0"
