[package]
name = "tokio-fsm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"

description = "Compile-time generation of Tokio async finite state machines with explicit Rust behavior and zero runtime engine"
keywords = ["tokio", "async", "fsm", "state-machine", "proc-macro"]
categories = [
    "asynchronous",
    "concurrency",
    "development-tools::procedural-macro-helpers",
]

[dependencies]
tokio-fsm-core = { workspace = true }
tokio-fsm-macros = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
