[package]
name = "axum_fsm"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio-fsm = { path = "../../tokio-fsm" }
tokio-fsm-core = { path = "../../tokio-fsm-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = "0.4"
tower = "0.4"
